@@ -51,6 +51,7 @@
 #define ID_EDITCONFLICT	21
 #define ID_OPENWITH		22
 #define ID_COPYCLIPBOARD 23
+#define ID_CHECKOUT		24
 
 #define LOGFILTER_ALL      1
 #define LOGFILTER_MESSAGES 2
